Paso a produccion bloques Contenido especial, En vivo

--- a/web/themes/custom/tailwindcss/src/sass/app.scss
+++ b/web/themes/custom/tailwindcss/src/sass/app.scss
@@ -18,5 +18,6 @@ $font-title: 'Passion One', cursive;
 @import "articles";
 @import "tournaments";
 @import "loader";
+@import "button";
 
 @tailwind utilities;
